UCL-30 fixed spacing for DataGrid + tests.

--- a/src/DataGrid/DataGridBody/DataGridCell.module.scss
+++ b/src/DataGrid/DataGridBody/DataGridCell.module.scss
@@ -4,30 +4,10 @@
   min-height: 3.5rem;
   padding: 0.5rem 0.625rem;
 
-  &:first-child {
-    padding-left: 1rem;
-  }
-
-  &:last-child {
-    padding-right: 1rem;
-  }
-
   .loading {
     @include skeletonLoading();
     border-radius: 0.5rem;
     height: 1.25rem;
     margin: 0.625rem 0;
-  }
-}
-
-@media only screen and (min-width: 50em) {
-  .cell {
-    &:first-child {
-      padding-left: 1.25rem;
-    }
-
-    &:last-child {
-      padding-right: 1.25rem;
-    }
   }
 }
